--- a/Application/Home/View/default/Common/aside.html
+++ b/Application/Home/View/default/Common/aside.html
@@ -27,7 +27,7 @@
             <p>
                 <select name="searchid" id="searchid">
                     <option value="2" selected="selected">产品展示</option>
-                    <option value="3">新闻中心</option>
+                    <option value="3">新闻资讯</option>
                     <option value="4">招聘信息</option>
                 </select>
             </p>
