--- a/Application/Home/View/default/Common/header.html
+++ b/Application/Home/View/default/Common/header.html
@@ -23,7 +23,7 @@
                 <li><a href="products.html" title="农资化工产品">农资化工产品</a></li>
             </ul>
         </li>
-        <li><a href="/news" title="新闻中心"><span>新闻中心</span></a></li>
+        <li><a href="/news" title="新闻资讯"><span>新闻资讯</span></a></li>
         <li><a href="/message" title="客户留言"><span>客户留言</span></a></li>
     </ul>
 </div>
