--- a/Application/Home/View/default/Index/index.html
+++ b/Application/Home/View/default/Index/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="index-news">
-                <h2><span>新闻中心</span><a href="news.html"><img src="/statics/home/Default/images/more.gif" width="32" height="5" alt="新闻中心" /></a></h2>
+                <h2><span>新闻资讯</span><a href="news.html"><img src="/statics/home/Default/images/more.gif" width="32" height="5" alt="新闻资讯" /></a></h2>
                 <ul>
                     <li class="clearfix"><a href="news.html" title="未来几年北美聚酯纤维需求快速增长"><img src="/statics/home/Default/images/index_NewsPic.jpg" alt="未来几年北美聚酯纤维需求快速增长" width="110" height="80" /></a><h3><a href="news.html" title="未来几年北美聚酯纤维需求快速增长">未来几年北美聚酯纤维需求快速...</a></h3><p>　　据英国PCI二甲苯和聚酯公司高级咨询师MichaelBermish日前表示，受包括服装、家庭装饰、...<a href="news.html" title="未来几年北美聚酯纤维需求快速增长">[详细]</a></p></li><li><a href="news.html" title="江苏化工企业接受环境风险全面排查"><span>2011/6/11</span>-　江苏化工企业接受环境风险全面排查</a></li><li><a href="news.html" title="资源税飙升稀土价格面临再次上涨"><span>2011/6/11</span>-　资源税飙升稀土价格面临再次上涨</a></li><li><a href="news.html" title="煤炭煤化工机会凸显"><span>2011/6/10</span>-　煤炭煤化工机会凸显</a></li><li><a href="news.html" title="德国巴斯夫三峡库区化工项目开建在即"><span>2011/6/10</span>-　德国巴斯夫三峡库区化工项目开建在即</a></li>
                 </ul>
@@ -55,7 +55,7 @@
                 <h2><span>站内搜索</span></h2>
                 <form action="" method="post" id="sitesearch" name="sitesearch">
                     <p>
-                        <select name="searchid" id="searchid"><option value="2">产品展示</option><option value="3">新闻中心</option><option value="4">招聘信息</option></select>
+                        <select name="searchid" id="searchid"><option value="2">产品展示</option><option value="3">新闻资讯</option><option value="4">招聘信息</option></select>
                     </p>
                     <p>
                         <input name="searchtext" type="text" id="searchtext"/>
