--- a/Application/Home/View/default/News/index.html
+++ b/Application/Home/View/default/News/index.html
@@ -10,7 +10,7 @@
     <div id="page_main" class="clearfix">
         <div class="page-right">
             <div class="site-nav"><span>当前位置 : </span><a href="index.html">公司主页</a> &gt;&gt; <a href="news.html"
-                                                                                                title="新闻中心">新闻中心</a>
+                                                                                                title="新闻资讯">新闻资讯</a>
             </div>
             <div class="page-news">
                 <table border="0" align="center">
