--- a/Application/Admin/View/Products/index.html
+++ b/Application/Admin/View/Products/index.html
@@ -77,8 +77,8 @@
 										</div>
 									</th>
 									<th>排序</th>
-									<th>ID</th>
-									<th>名称</th>
+									<th>缩略图</th>
+									<th style=" width: 30%">名称</th>
 									<th>分类</th>
 									<th>是否发布</th>
 									<th>点击量</th>
@@ -98,7 +98,9 @@
 										<td>
 											<input name='listorders[{$vo.nid}]' type='text' size='3' value='{$vo.listorder}' class="form-control input-sm input-listorder">
 										</td>
-										<td>{$vo.nid}</td>
+										<td>
+											<img src="{$vo.thumb}" style="width: 77px; height: 55px;">
+										</td>
 										<td><a href="{:U('/productss/detail',array('id'=>$vo['nid']))}" target="_blank" title="{$vo.tile}">
 											<span style="" >{$vo.title}</span>
 										</a>
@@ -113,14 +115,14 @@
 										<td>{$vo.nid}</td>
 										<td>{$vo.edittime|date="Y-m-d H:i:s",###}</td>
 										<td>
-											<a href="javascript:layyer('{:U('Admin/Products/edit',array('nid'=>$vo[nid]))}','修改产品')">修改</a>&nbsp;|&nbsp;<a  href="{:U('Admin/New/del',array('nid'=>$vo[nid]))}" onclick="Delete(this);return false;">删除</a>
+											<a href="javascript:layyer('{:U('Admin/Products/edit',array('nid'=>$vo[nid]))}','修改产品')">修改</a>&nbsp;|&nbsp;<a href="{:U('Admin/Products/del',array('nid'=>$vo[nid]))}" onclick="Delete(this);return false;">删除</a>
 										</td>
 									</tr>
 								</foreach>
 								</tbody>
 							</table>
 							<div>
-								<input type="button" class="btn btn-primary" value="排序"  style="cursor:pointer" onclick="myform.action='{:U('Admin/Products/listorder',array('dosubmit'=>1))}';myform.submit();"/>
+								<input type="button" class="btn btn-primary" value="排序"  style="cursor:pointer" onclick="myform.action='{:U('Admin/Products/listorder',array('dosubmit'=>1))}'; myform.submit();"/>
 								<input type="button" class="btn btn-danger" value="删除" style="cursor:pointer" onclick="datadel()"/>
 							</div>
 						</form>
