--- a/Application/Home/View/default/Common/header.html
+++ b/Application/Home/View/default/Common/header.html
@@ -6,7 +6,7 @@
 </div>
 <div id="MainMenu" class="ddsmoothmenu">
     <ul>
-        <li ><a <eq name="CONTROLLER_NAME" value="Index">id="menu_selected"</eq> href="/" title="公司主页"><span>公司主页{$Think.CONTROLLER_NAME}</span></a></li>
+        <li ><a <eq name="CONTROLLER_NAME" value="Index">id="menu_selected"</eq> href="/" title="公司主页"><span>公司主页</span></a></li>
         <li><a <eq name="CONTROLLER_NAME" value="Abouts">id="menu_selected"</eq> href="/abouts" title="公司简介"><span>公司简介</span></a></li>
         <li><a <eq name="CONTROLLER_NAME" value="Products">id="menu_selected"</eq> href="/products" title="产品展示"><span>产品展示</span></a>
             <ul class="menulevel">
