--- a/Application/Home/View/default/Common/head.html
+++ b/Application/Home/View/default/Common/head.html
@@ -10,7 +10,8 @@
 <link href="/statics/home/Default/css/reset.css" rel="stylesheet" type="text/css" />
 <link href="/statics/home/Default/css/webmain.css" rel="stylesheet" type="text/css" />
 <link href="/statics/home/Default/css/ddsmoothmenu.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="/statics/home/Default/scripts/jquery-1.4.2.min.js"></script>
+<link href="/statics/home/Default/kf/css/style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/statics/home/Default/kf/js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/statics/home/Default/scripts/jquery.KinSlideshow-1.2.1.js"></script>
 <script type="text/javascript" src="/statics/home/Default/scripts/webtry_roll.js"></script>
 <script type="text/javascript" src="/statics/home/Default/scripts/ddsmoothmenu.js"></script>
