--- a/Application/Home/View/default/Common/header.html
+++ b/Application/Home/View/default/Common/header.html
@@ -1,8 +1,12 @@
 <div class="top">
-    <img src="/statics/home/Default/images/logo.gif" height="90" alt="上海网聚化工有限公司"/>
-    <div id="lang"><a
-            href="javascript:if(confirm('只有企业版才有多语言功能，请点击确定访问netgather.com咨询。')){location.href='http://www.netgather.com'}"><img
-            src="/statics/home/Default/images/gb.gif" width="16" height="11" alt="English"/>English</a></div>
+    <a href="/">
+        <img src="/statics/home/Default/images/logo.png" style="height: 80px; margin-left: 2%; padding-top: 8px;" alt="{$config.sitename}"/>
+    </a>
+    <div id="lang" style="padding-top: 20px;">
+        <p style="padding-left: 34px; font-size: 12px; color: #666666;letter-spacing: 4px;">全国销售热线电话</p>
+        <a href="javascript:void(0)"  style="font-size: 14px; color:#dd2201; font-weight:600
+        ; letter-spacing: 1px;">
+            <img src="/statics/home/Default/images/phone.png"  style="width: 25px; margin-top: -21px; padding-right: 5px;" alt="服务热线"/>{$contact.phone}</a></div>
 </div>
 <div id="MainMenu" class="ddsmoothmenu">
     <ul>
